ui: fix footer widgets style ui: fix resume layout chore: change dt-published to be valid ISO-8601 ui: fix scrollbar style on chrome ui: add border to scroll to top button

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -43,10 +43,6 @@
 	height: 8px;
 }
 
-::-webkit-scrollbar-track {
-	@apply bg-nfh-accent-primary;
-}
-
 ::-webkit-scrollbar-thumb {
 	@apply rounded-full bg-nfh-accent-primary transition-colors hover:bg-nfh-accent-primary;
 }
